--- a/client/package.json
+++ b/client/package.json
@@ -23,18 +23,18 @@
     "socket.io-client": "^4.8.1",
     "util": "^0.12.5",
     "uuid": "^11.1.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "vite": "^7.1.2",
+    "@vitejs/plugin-react": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "sass": "^1.92.0",
-    "vite": "^7.1.2"
+    "sass": "^1.92.0"
   }
 }
